[noncoaxial] parallel running

--- a/run/nts/noncoaxial/Makefile
+++ b/run/nts/noncoaxial/Makefile
@@ -1,2 +1,16 @@
-clean:	
-	rm -rf `ls | grep -E '^[1-9]'`
+PROJECT=noncoaxial
+BOUNDARY=constant/polyMesh/boundary
+
+all: $(BOUNDARY).gmsh
+
+$(BOUNDARY).gmsh: $(BOUNDARY)
+	./updatePolyMesh.sh
+
+constant/polyMesh/boundary: $(PROJECT).msh
+	gmshToFoam $(PROJECT).msh
+
+$(PROJECT).msh: $(PROJECT).geo
+	gmsh -3 $(PROJECT).geo
+
+clean:
+	. $(WM_PROJECT_DIR)/bin/tools/CleanFunctions && cleanCase
