--- a/run/nts/noncoaxial/Makefile
+++ b/run/nts/noncoaxial/Makefile
@@ -14,3 +14,6 @@ $(PROJECT).msh: $(PROJECT).geo
 
 clean:
 	. $(WM_PROJECT_DIR)/bin/tools/CleanFunctions && cleanCase
+	rm -f 0/wall*
+	rm $(PROJECT).msh
+	rm -rf constant/polyMesh
