[elliptic] make it up to date

--- a/run/nts/elliptic/Makefile
+++ b/run/nts/elliptic/Makefile
@@ -1,2 +1,19 @@
-clean:	
-	rm -rf `ls | grep -E '^[1-9]'`
+PROJECT=elliptic
+BOUNDARY=constant/polyMesh/boundary
+
+all: $(BOUNDARY).gmsh
+
+$(BOUNDARY).gmsh: $(BOUNDARY)
+	./updatePolyMesh.sh
+
+constant/polyMesh/boundary: $(PROJECT).msh
+	. $(WM_PROJECT_DIR)/bin/tools/RunFunctions && runApplication gmshToFoam $(PROJECT).msh
+
+$(PROJECT).msh: $(PROJECT).geo
+	gmsh -3 $(PROJECT).geo > log.gmsh 2>&1
+
+clean:
+	. $(WM_PROJECT_DIR)/bin/tools/CleanFunctions && cleanCase
+	rm -f 0/wall*
+	rm $(PROJECT).msh
+	rm -rf constant/polyMesh
