--- a/Dockerfile.centos
+++ b/Dockerfile.centos
@@ -1,8 +1,9 @@
-FROM openfoamplus/of_v1912_centos73:latest
+FROM openfoamplus/of_v2006_centos73:latest
 
 # boost-devel is used to build source-highlight from source
 RUN yum install -y epel-release \
- && yum install -y ack colordiff gdb git less mlocate boost-devel vim \
+ && yum-config-manager --add-repo=https://copr.fedorainfracloud.org/coprs/carlwgeorge/ripgrep/repo/epel-7/carlwgeorge-ripgrep-epel-7.repo \
+ && yum install -y ack colordiff gdb git less mlocate boost-devel vim ripgrep \
  && yum clean all \
  && rm -rf /var/lib/apt/lists/*
 
@@ -11,6 +12,7 @@ RUN echo "source $(ls /opt/OpenFOAM/setImage_*.sh)" >> /etc/profile.d/openfoam.s
 RUN curl https://raw.githubusercontent.com/tpope/vim-pathogen/master/autoload/pathogen.vim \
     > /usr/share/vim/vimfiles/autoload/pathogen.vim
 
+# install source-highlight for colorize less
 ARG source_highlight="source-highlight-3.1.8"
 RUN wget ftp://ftp.gnu.org/gnu/src-highlite/"$source_highlight".tar.gz \
  && tar xf "$source_highlight".tar.gz \
