--- a/Dockerfile.ubuntu
+++ b/Dockerfile.ubuntu
@@ -1,8 +1,8 @@
-FROM openfoam/openfoam-dev-graphical-apps:latest
+FROM opencfd/openfoam2106-default:latest
 
 USER root
 
-RUN apt-get update \
+RUN wget -q -O - https://dl.openfoam.com/add-debian-repo.sh | sudo bash \
  && apt-get install -y ack colordiff gdb git less mlocate source-highlight vim-pathogen ripgrep \
  && apt-get clean autoclean \
  && rm -rf /var/lib/apt/lists/*
