--- a/Dockerfile.ubuntu
+++ b/Dockerfile.ubuntu
@@ -1,6 +1,8 @@
-FROM opencfd/openfoam2112-default:latest
+FROM opencfd/openfoam-default:latest
 
 USER root
+
+ENV DEBIAN_FRONTEND noninteractive
 
 RUN wget -q -O - https://dl.openfoam.com/add-debian-repo.sh | sudo bash \
  && apt-get install -y python-is-python3 ack colordiff gdb git less mlocate source-highlight vim-pathogen ripgrep \
