--- a/Dockerfile.ubuntu
+++ b/Dockerfile.ubuntu
@@ -5,7 +5,7 @@ USER root
 ENV DEBIAN_FRONTEND noninteractive
 
 RUN wget -q -O - https://dl.openfoam.com/add-debian-repo.sh | sudo bash \
- && apt-get install -y python-is-python3 ack colordiff gdb git less mlocate source-highlight vim-pathogen ripgrep \
+ && apt-get install -y python-is-python3 ack colordiff gdb git less mlocate source-highlight vim-pathogen ripgrep rename \
  && apt-get clean autoclean \
  && rm -rf /var/lib/apt/lists/*
 
