update auxiliary files

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,7 +1,3 @@
-[user]
-    name = Oleg Rogozin
-    email = o.a.rogozin@gmail.com
-
 [core]
     editor = vim
     ignorecase = false
@@ -18,10 +14,14 @@
     prompt = false
 
 [alias]
-    d = diff
     co = checkout
-    up = !git submodule update --init --recursive
     st = status -suno
     br = branch
     hist = log --graph --format='%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset'
+    d = diff
+    dc = diff --cached
+    s = show
+    h = hist
 
+[safe]
+    directory = /home/openfoam
