--- a/Dockerfile.ubuntu
+++ b/Dockerfile.ubuntu
@@ -2,11 +2,10 @@ FROM opencfd/openfoam-default:latest
 
 USER root
 
-ENV DEBIAN_FRONTEND noninteractive
+ENV DEBIAN_FRONTEND=noninteractive
 
 RUN wget -q -O - https://dl.openfoam.com/add-debian-repo.sh | sudo bash \
- && apt-get install -y python-is-python3 ack colordiff gdb git less mlocate source-highlight vim-pathogen ripgrep rename \
- && apt-get clean autoclean \
- && rm -rf /var/lib/apt/lists/*
-
-RUN updatedb
+ && apt-get install -y -y --no-install-recommends python-is-python3 ack \
+    colordiff gdb git less locate source-highlight vim-pathogen ripgrep rename \
+ && rm -rf /var/lib/apt/lists/* \
+ && updatedb
