--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ lnInclude*
 log*
 dynamicCode
 polyMesh
+faMesh
 boundary
 postProcessing
 processor*
@@ -24,6 +25,8 @@ processor*
 *.foam
 *.msh
 *.obj
+cellLevel
+uniform
 
 # Results files
 *.vtk
