--- a/Dockerfile.ubuntu
+++ b/Dockerfile.ubuntu
@@ -5,7 +5,8 @@ USER root
 ENV DEBIAN_FRONTEND=noninteractive
 
 RUN wget -q -O - https://dl.openfoam.com/add-debian-repo.sh | sudo bash \
- && apt-get install -y -y --no-install-recommends python-is-python3 ack \
-    colordiff gdb git less locate source-highlight vim-pathogen ripgrep rename \
+ && apt-get install -y --no-install-recommends python-is-python3 ack colordiff \
+    gdb git less locate source-highlight vim-pathogen ripgrep rename \
+    bash-completion \
  && rm -rf /var/lib/apt/lists/* \
  && updatedb
